# aw-tauri

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  aw-notify  devbox.json  gptme.toml  package-lock.json  package.json  settings.html
.github/: dependabot.yml
.github/workflows/: build.yml  gptme.yml  lint.yml  release.yml
src/: App.vue
src-tauri/: Cargo.lock.bak  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: dirs.rs  lib.rs  lib.rs.orig  logging.rs  main.rs  main.rs.orig  manager.rs  modules_dl.rs
