[package]
name = "aw-tauri"
version = "0.1.0"
description = "ActivityWatch UI built with Tauri"
authors = ["Erik Bjäreholt <erik@bjareho.lt>", "Brian Vuku <brayo@brayo.dev>"]
license = "MPL-2.0"
repository = "https://github.com/ActivityWatch/aw-tauri"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aw_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"

notify = "6.1"
directories = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.19"
lazy_static = "1.4"
#[cfg(unix)]
nix = { version = "0.28.0", features = ["process", "signal"] }
#[cfg(windows)]
winapi = { version = "0.3", features = ["winuser"] }

aw-server = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
aw-datastore = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

