[package]
name = "aw-tauri"
version = "0.1.0"
description = "ActivityWatch UI built with Tauri"
authors = ["Erik Bjäreholt <erik@bjareho.lt>", "Brian Vuku <brayo@brayo.dev>"]
license = "MPL-2.0"
repository = "https://github.com/ActivityWatch/aw-tauri"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aw_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
shell-words = "1.1.0"
tauri = { version = "2.2.5", features = ["tray-icon"] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-notification = "2.2.1"
tauri-plugin-single-instance = "2.2.1"

notify = "8.0.0"
directories = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
toml = "0.8.19"
lazy_static = "1.5.0"
log = "0.4.25"
fern = { version = "0.7.1", features = ["colored"] }
chrono = "0.4.39"
aw-server = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
aw-datastore = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
tauri-plugin-opener = "2"
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["process", "signal"] }
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.2.0"

